# stockroom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  ai-rizz.skbd  properdocs.yaml  pyproject.toml  release-please-config.json
.claude-plugin/: plugin.json
planning/spikes/o9-torch/: README.md  pyproject.toml  smoke.py
skills/sr-search/: SKILL.md  pyproject.toml
skills/sr-search/references/: system-model.md
skills/sr-search/src/stockroom/: __init__.py  __main__.py  config.py  doctor.py  embed.py  engine_env.py  home.py  migrate.py  query.py  render.py  schedule.py  semantic.py  shim.py  shim_template.sh  timestamps.py  torch_cli.py  torch_source.py  truncate.py  warehouse.py
skills/sr-search/src/stockroom/dashboard/: __init__.py  __main__.py  identity.py  metrics.py  model_usage.py  server.py  skill_usage.py
skills/sr-search/src/stockroom/dashboard/static/: dashboard-core.mjs  dashboard-data.mjs  dashboard-session.mjs  dashboard-tokens.mjs  dashboard.mjs  index.html
skills/sr-search/src/stockroom/ingest/: __init__.py  __main__.py  claude.py  cursor.py  cursor_chats.py  enrich.py  model.py  paths.py  sources.py  writer.py
skills/sr-search/src/stockroom/migrations/: 0001_initial_schema.sql  0002_workspace_identity.sql  0003_embeddings_hnsw_index.sql  0004_observation_times.sql  0005_utc_timestamps.sql  0006_workspace_key.sql  0007_session_token_usage.sql  0008_entrypoint.sql  __init__.py
skills/sr-search/tests/: _warehouse_worker.py  conftest.py  test_config.py  test_dashboard_cli.py  test_dashboard_identity.py  test_dashboard_metrics.py  test_dashboard_model_usage.py  test_dashboard_server.py  test_dashboard_skill_usage.py  test_dashboard_static.py  test_dispatcher_cli.py  test_doctor.py  test_doctor_cli.py  test_embed.py  test_engine_env.py  test_ingest_claude.py  test_ingest_cli.py  test_ingest_cursor.py  test_ingest_cursor_chats.py  test_ingest_enrich.py  test_ingest_fixtures.py  test_ingest_model.py  test_ingest_orchestrator.py  test_ingest_paths.py  test_ingest_sources.py  test_ingest_writer.py  test_licensing.py  test_localdev_hooks.py  test_lock_hermetic.py  test_migrate_cli.py  test_migrate_runner.py  test_migrations_discovery.py  test_packaging.py  test_query.py  test_query_cli.py  test_query_cookbook.py  test_render.py  test_schedule.py  test_schedule_cli.py  test_schema_0001.py  (+23 more)
skills/sr-search/tests-js/: dashboard-core.test.mjs  dashboard-data.test.mjs  dashboard-session.test.mjs  dashboard-time.test.mjs  dashboard-tokens.test.mjs
skills/sr-search/tests/fixtures/ingest/: expected_rows.json
skills/sr-search/tests/fixtures/ingest/cursor_chats/projhash1234567890abcdefprojhash12/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee/: store.db
skills/sr-search/tests/fixtures/schema/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json
skills/sr-search/tests/fixtures/transcripts/: README.md
skills/sr-search/tests/fixtures/transcripts/claude/-home-user-project/: 22222222-2222-4222-8222-222222222222.jsonl  pathological-huge-tool-input.jsonl  pathological-multi-model.jsonl  pathological-user-content-shapes.jsonl  robustness-record-types.jsonl  simple-conversation.jsonl
skills/sr-search/tests/fixtures/transcripts/claude/-home-user-project/22222222-2222-4222-8222-222222222222/subagents/: agent-aaa111.jsonl  agent-aaa111.meta.json
skills/sr-search/tests/fixtures/transcripts/claude/with-subagent/subagents/: agent-aaa111.jsonl  agent-aaa111.meta.json
skills/sr-search/tests/fixtures/transcripts/cursor/: simple-conversation.jsonl
skills/sr-search/tests/fixtures/transcripts/cursor/home-user-cursor-rules/agent-transcripts/ambiguous-nopath/: ambiguous-nopath.jsonl
skills/sr-search/tests/fixtures/transcripts/cursor/home-user-lite-rpg/agent-transcripts/recover-inband/: recover-inband.jsonl
skills/sr-search/tests/fixtures/transcripts/cursor/home-user-project/agent-transcripts/00000000-0000-4000-8000-000000000001/: 00000000-0000-4000-8000-000000000001.jsonl
skills/sr-search/tests/fixtures/transcripts/cursor/home-user-project/agent-transcripts/pathological-many-tools/: pathological-many-tools.jsonl
skills/sr-search/tests/fixtures/transcripts/cursor/home-user-project/agent-transcripts/pathological-turn-ended-error/: pathological-turn-ended-error.jsonl
(+312 files in other folders)
