[project]
name = "o9-torch-spike"
version = "0.0.0"
description = "O9 spike: lock everything EXCEPT torch with uv, keep sentence-transformers working."
requires-python = ">=3.11"
# Representative of stockroom's real dependency surface. Note: torch is NOT
# declared here. sentence-transformers depends on it transitively.
dependencies = [
    "duckdb>=1.2",
    "sentence-transformers>=3.0",
    "numpy",
]

[tool.uv]
# O9 mechanism under test: exclude torch from the locked resolution entirely by
# overriding every torch requirement (including sentence-transformers') with an
# impossible marker. requires-python is >=3.11, so `python_full_version < '3'` is
# always false -> torch (and its CUDA transitives) never enter the lock.
# torch is then provided out-of-band via a platform-specific wheel install.
override-dependencies = ["torch; python_full_version < '3'"]
